{
    "name": "DefaultAction",
    "maps": [
        {
            "name": "Rocket",
            "id": "c3a69889-e927-4069-9405-ca5af7ce787b",
            "actions": [
                {
                    "name": "ForceUp",
                    "type": "PassThrough",
                    "id": "e9c31131-8fe0-4c59-97ec-a23fdb2afcc0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftRight",
                    "type": "PassThrough",
                    "id": "6b7f9c55-ebcd-4ab4-b344-aa9ef2a4b665",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "IsPause",
                    "type": "PassThrough",
                    "id": "fb7a2abc-b82f-4992-98b0-729bafadf7d3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "949c29b4-69f5-4f52-90b4-e19e45d83757",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForceUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "AD",
                    "id": "ef2a4261-f260-4c2c-a29b-edd9d35a6162",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d602efe4-33e2-46a7-ad35-e356058b5f5d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "acd648ea-e443-49ba-8da1-00e1851aed42",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4c89805f-ab02-4a98-a1ef-13560c81f833",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IsPause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}